Dark mode fix

--- a/src/components/pages/playbook/playbook-edit/playbook-edit-page.scss
+++ b/src/components/pages/playbook/playbook-edit/playbook-edit-page.scss
@@ -116,6 +116,7 @@
 					.slot-row,
 					.terrain-row {
 						background-color: rgba(0, 0, 0);
+						color: rgba(255, 255, 255, 0.88);
 					}
 				}
 			}
@@ -124,6 +125,7 @@
 				.monster-row,
 				.terrain-row {
 					background-color: rgba(0, 0, 0);
+					color: rgba(255, 255, 255, 0.88);
 				}
 			}
 		}
